--- a/style.css
+++ b/style.css
@@ -2,15 +2,19 @@ html,
 body,
 main {
   height: 100%;
-}
-
-main {
-  display: flex;
   background: #f3f5fc;
 }
 
+textarea,
+p,
+button {
+  font-family: "Inter", sans-serif;
+}
+main {
+  display: flex;
+}
+
 .bloqueinicial {
-  background: red;
   flex: 0.5 1 auto;
   text-align: right;
 }
@@ -20,7 +24,6 @@ main {
 }
 
 .bloquemedio {
-  background: yellow;
   flex: 2 1 auto;
   display: block;
 }
@@ -31,6 +34,7 @@ main {
   line-height: 150%;
   margin-top: 15%;
   margin-left: 10%;
+  background: #f3f5fc;
   width: 80%;
   color: #0a3871;
   resize: none;
@@ -38,19 +42,21 @@ main {
   outline: none;
 }
 
+#texto::placeholder {
+  color: #0a3871;
+}
+
 .mensaje {
   display: flex;
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 30%;
-  background: aqua;
 }
 
 .mensaje p {
   font-style: normal;
   font-size: 12px;
   line-height: 150%;
-
   padding: 10px;
   color: #495057;
   opacity: 0.8;
@@ -60,7 +66,6 @@ main {
   display: flex;
   margin-left: 10%;
   margin-right: 10%;
-
   gap: 5%;
   align-items: center;
 }
@@ -94,31 +99,74 @@ main {
 }
 
 .bloqueresultado {
-  background: green;
+  height: 95%;
   flex: 1 1 auto;
   display: block;
 }
 
-.superior {
-  background: blue;
+.fondo {
+  height: 98%;
+  width: 90%;
   border-radius: 32px;
-  margin-top: 5%;
+  margin: 5% auto;
+  text-align: center;
+  background: #ffffff;
 }
 
 #salida {
-  margin-top: 15%;
-  margin-left: 5%;
   font-style: normal;
+  margin-top: 20%;
+  width: 80%;
   font-weight: 400;
   font-size: 24px;
   line-height: 150%;
   color: #0a3871;
   resize: none;
-  background: #ffffff;
   border: none;
   outline: none;
+  display: none;
 }
 
-.superior img {
-  display: none;
+.fondo img {
+  display: block;
+  width: 50%;
+  height: 50%;
+  margin: 0 auto;
+  padding-top: 20%;
+}
+
+#textonoencontrado {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 120%;
+  text-align: center;
+  color: #343a40;
+  display: block;
+}
+
+#ingresetexto {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  text-align: center;
+  color: #495057;
+  display: block;
+}
+
+#copiar {
+  position: relative;
+  margin-top: 29%;
+  width: 80%;
+  height: 67px;
+  border: 1px solid #0a3871;
+  border-radius: 24px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #0a3871;
+  visibility: hidden;
 }
