--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
 html,
 body {
-  height: 100%;
   background: #f3f5fc;
-}
-
-main {
-  height: 95%;
 }
 
 textarea,
@@ -102,14 +97,13 @@ main {
 }
 
 .bloqueresultado {
-  height: 100%;
   flex: 1 1 auto;
   display: block;
 }
 
 .fondo {
-  height: 95%;
   width: 90%;
+  height: 100%;
   border-radius: 32px;
   margin: 5% auto;
   text-align: center;
@@ -176,7 +170,7 @@ main {
 
 footer {
   text-align: center;
-  height: 5%;
+  margin-top: 2%;
 }
 
 footer p {
