--- a/style.css
+++ b/style.css
@@ -42,9 +42,6 @@ main {
 .mensaje {
   display: flex;
   margin: 0 auto;
-  /**margin-left: 10%;
-  margin-right: 10%;
-  margin-top: 10ch;**/
 }
 
 .mensaje img {
@@ -97,7 +94,6 @@ main {
 .bloqueresultado {
   flex: 1 1 auto;
   display: block;
-
   padding-top: 5ch;
 }
 .fondo {
@@ -144,7 +140,7 @@ main {
 #ingresetexto {
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1em;
   line-height: 150%;
   text-align: center;
   color: #495057;
@@ -175,344 +171,107 @@ footer p {
   color: #0a3871;
 }
 
-@media screen and (max-width: 768) {
-  main {
-    display: flex;
-    flex-direction: column;
-  }
-}
-/**html,
-body {
-  background: #f3f5fc;
-}
-
-textarea,
-p,
-button {
-  font-family: "Inter", sans-serif;
-}
-main {
-  display: flex;
-}
-
-.bloqueinicial {
-  flex: 0.5 1 auto;
-  text-align: right;
-}
-
-.bloqueinicial img {
-  padding-top: 50%;
-}
-
-.bloquemedio {
-  flex: 2 1 auto;
-  display: block;
-}
-
-#texto {
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 150%;
-  margin-top: 15%;
-  margin-left: 10%;
-  background: #f3f5fc;
-  width: 80%;
-  color: #0a3871;
-  resize: none;
-  border: none;
-  outline: none;
-}
-
-#texto::placeholder {
-  color: #0a3871;
-}
-
-.mensaje {
-  display: flex;
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-top: 15%;
-}
-
-.mensaje p {
-  font-style: normal;
-  font-size: 12px;
-  line-height: 150%;
-  padding: 10px;
-  color: #495057;
-  opacity: 0.8;
-}
-
-.botones {
-  display: flex;
-  margin-left: 10%;
-  margin-right: 10%;
-  gap: 5%;
-  align-items: center;
-}
-
-#encriptar {
-  background: #0a3871;
-  height: 67px;
-  border-radius: 24px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
-  text-align: center;
-  border: none;
-  color: #ffffff;
-  flex: 1 1 auto;
-}
-
-#desencriptar {
-  background: #d8dfe8;
-  height: 67px;
-  border-radius: 24px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
-  text-align: center;
-  border-color: #0a3871;
-  color: #0a3871;
-  flex: 1 1 auto;
-}
-
-.bloqueresultado {
-  flex: 1 1 auto;
-  display: block;
-}
-
-.fondo {
-  width: 90%;
-  height: 100%;
-  border-radius: 32px;
-  margin: 5% auto;
-  text-align: center;
-  background: #ffffff;
-}
-
-#salida {
-  font-style: normal;
-  height: 66%;
-  margin-top: 20%;
-  width: 80%;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 150%;
-  color: #495057;
-  resize: none;
-  border: none;
-  outline: none;
-  display: none;
-}
-
-.fondo img {
-  display: block;
-  width: 50%;
-  height: 50%;
-  margin: 0 auto;
-  padding-top: 20%;
-}
-
-#textonoencontrado {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 120%;
-  text-align: center;
-  color: #343a40;
-  display: block;
-}
-
-#ingresetexto {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  text-align: center;
-  color: #495057;
-  display: block;
-}
-
-#copiar {
-  position: relative;
-  margin-top: 10%;
-  width: 80%;
-  height: 67px;
-  border: 1px solid #0a3871;
-  border-radius: 24px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
-  text-align: center;
-  color: #0a3871;
-  visibility: hidden;
-}
-
-footer {
-  text-align: center;
-  margin-top: 5%;
-}
-
-footer p {
-  font-size: 0.8em;
-  color: #0a3871;
-}
-
-@media screen and (max-width: 1440px) {
-  html,
-  body,
-  main,
-  .bloquemedio,
-  .bloqueresultado,
-  .bloqueinicial {
-    height: unset;
-  }
-
-  .mensaje {
-    margin-top: 0%;
-  }
-
-  #salida {
-    height: 56%;
-  }
-
-  #copiar {
-    margin-top: 5%;
-  }
-
-  footer {
-    margin-top: 14%;
-  }
-}
-
-@media screen and (max-width: 1366px) {
-  .mensaje {
-    margin-top: 0%;
-  }
-
-  #salida {
-    height: 64%;
-  }
-
-  #copiar {
-    margin-top: 0%;
-  }
-}
-
 @media screen and (max-width: 768px) {
-  #salida {
-    height: 66%;
-  }
-  footer {
-    margin-top: 14%;
-  }
-}
-
-@media screen and (max-width: 720px) {
   main {
-    flex-direction: column;
-  }
-
-  .bloqueinicial {
-    text-align: left;
-    flex: 0 0;
-  }
-
-  .bloqueinicial img {
-    margin-top: 10%;
-    margin-left: 5%;
-    padding-top: 0%;
-  }
-
-  .bloquemedio {
-    flex: 1 0;
-  }
-
-  .bloqueresultado {
-    height: 0%;
-    flex: 1 0;
-  }
-
-  .fondo {
     display: flex;
     flex-direction: column;
-    width: 80%;
-    height: 60%;
-    margin: 10% auto;
+    padding: 4em;
+  }
+  .bloqueinicial {
+    display: flex;
   }
 
-  #salida {
-    margin: 2% auto;
-  }
-
-  .fondo img {
-    display: none;
-  }
-
-  #textonoencontrado {
-    padding-top: 20%;
-  }
-}
-
-@media screen and (max-width: 375px) and (max-width: 425px) {
-  html,
-  body,
-  main {
-    height: unset;
-  }
-
-  .botones {
-    flex-direction: column;
-    align-items: unset;
-  }
-
-  #desencriptar {
-    margin-top: 2%;
-  }
-}
-
-@media screen and (max-width: 360px) {
   #texto {
-    font-size: 1em;
+    margin-top: 5ch;
+    margin-left: 0%;
+  }
+  .mensaje {
+    margin: 0;
+  }
+
+  .mensaje img {
+    margin-left: 0;
   }
 
   .mensaje p {
-    font-size: 0.5em;
+    font-size: 0.7em;
+    padding: 1em;
   }
-
-  #encriptar {
-    font-size: 0.9em;
+  .botones {
+    margin-left: 0%;
+    margin-right: 0%;
+    gap: 5%;
+    align-items: unset;
   }
-
-  #desencriptar {
-    font-size: 0.9em;
+  .bloqueresultado {
+    padding-top: 0;
+    display: flex;
+    margin-top: 5%;
   }
-
+  .fondo {
+    margin: 0;
+    text-align: unset;
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 auto;
+    justify-content: center;
+    align-items: center;
+    gap: 1ch;
+    box-shadow: 5px 10px 5px rgb(245, 245, 245);
+  }
+  .fondo img {
+    display: none;
+  }
   #textonoencontrado {
-    font-size: 1em;
-    padding-top: 10%;
+    display: block;
   }
 
   #ingresetexto {
-    font-size: 0.6em;
+    margin-bottom: 5%;
+    display: block;
+  }
+  #salida {
+    display: none;
+  }
+  #copiar {
+    width: 33em;
+    display: none;
+    visibility: visible;
   }
 
-  @media screen and (max-width: 320px) {
-    .botones {
-      flex-direction: column;
-      align-items: unset;
-    }
-
-    #desencriptar {
-      margin-top: 2%;
-    }
-    footer {
-      margin-top: 45%;
-    }
+  footer {
+    margin-top: 0;
   }
 }
-**/
+
+@media screen and (max-width: 425px) {
+  main {
+    flex-direction: column;
+    padding: 2ch;
+  }
+  .bloqueinicial img {
+    margin-top: 0;
+  }
+  #texto {
+    width: 100%;
+  }
+  .botones {
+    flex-direction: column;
+    gap: 3ch;
+  }
+
+  #textonoencontrado {
+    margin-right: 10%;
+    margin-left: 10%;
+    display: block;
+  }
+
+  #ingresetexto {
+    display: block;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  .fondo {
+    width: 100%;
+  }
+}
